# AdvancedNetwork

./: CMakeLists.txt  CubeGameApi.csproj  CubeGameApi.sln  Program.cs  README.md  appsettings.json
.github/workflows/: cmake-multi-platform.yml
Controllers/: AchievementsController.cs  AuthController.cs  GameServerAuthController.cs  GameServerController.cs  MatchmakingController.cs  StatController.cs
DTOs/: GameServerLoginRequest.cs
Model/: Achievement.cs  GameServer.cs  GameServerAuth.cs  LobbyModel.cs  Playerstats.cs  User.cs  UserDb.cs
Properties/: launchSettings.json
Services/: AchievementService.cs  AuthService.cs  GameServerAuthService.cs  GameServerService.cs  IAchievementService.cs  IAuthService.cs  IGameServerAuthService.cs  IGameServerService.cs  IMatchmakingService.cs  IStatService.cs  MatchmakingService.cs  StatService.cs
TP1/Client/: CMakeLists.txt  main.cpp
TP1/Client/Libraries/Socket/: CMakeLists.txt  Socket.h  Socket_posix.cpp  Socket_windows.cpp
TP1/Server/: CMakeLists.txt  main.cpp
TP1/Socket/: CMakeLists.txt  Socket.h  Socket_common.cpp  Socket_posix.cpp  Socket_windows.cpp  library.h
inc/: falcon.h  stream.h
samples/client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
samples/server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/: CubeGame.cpp  CubeGame.h  falcon_common.cpp  falcon_posix.cpp  falcon_windows.cpp  main.cpp  stream.cpp
src/GameLogic/: GameLogic.cpp  GameLogic.h
src/GameObject/Drawable/: MBDrawable.cpp  MBDrawable.h  MBUiRenderer.cpp  MBUiRenderer.h
src/GameObject/Object/: GameState.h  MBCubeObject.cpp  MBCubeObject.h  MBObject.cpp  MBObject.h  MBSphereObject.cpp  MBSphereObject.h
src/GameObject/Player/: Player.cpp  Player.h
src/GameObject/RigidBody/: MBRigidBody.cpp  MBRigidBody.h
src/Network/: APIHandler.cpp  APIHandler.h  LinkingContext.cpp  LinkingContext.h  MatchmakingManager.cpp  MatchmakingManager.h  NetworkEvent.h  NetworkObjectFactory.cpp  NetworkObjectFactory.h
tests/: CMakeLists.txt  test.cpp
